fix(sonar): clear small Web/Java/TS smells outside S7924
Fix multi-declare, dead conditions, useless assigns, autocomplete, type aliases, dataset/export patterns, video tracks, and a batch of one-off Java/TS maintainability findings.

Co-authored-by: Cursor <cursoragent@cursor.com>